src/lib/schwa/formats/http_gen.cc

#line 1 "../ragel/formats/http/main.rl"
// vim: ft=ragel:
/* -*- Mode: C++; indent-tabs-mode: nil -*- */


#line 11 "../ragel/formats/http/main.rl"


#include <schwa/formats/http.h>

namespace schwa {
namespace formats {


#line 17 "schwa/formats/http_gen.cc"
static const int http_start = 1;

static const int http_en_consume_bad_header_field = 455;
static const int http_en_main = 1;
static const int http_en_main_http_message_header_field_recover = 18;


#line 19 "../ragel/formats/http/main.rl"

bool
HTTPParser::_run(const uint8_t *const input, const size_t nbytes) {
  (void)http_en_main;  // Shoosh compiler warning about unused variable.
  (void)http_en_consume_bad_header_field;
  (void)http_en_main_http_message_header_field_recover;
  const uint8_t *p = input, *pe = p + nbytes, *eof = pe;
  int cs = 0;

  
#line 36 "schwa/formats/http_gen.cc"
	{
	cs = http_start;
	}

#line 29 "../ragel/formats/http/main.rl"
  
#line 43 "schwa/formats/http_gen.cc"
	{
	short _widec;
	if ( p == pe )
		goto _test_eof;
	switch ( cs )
	{
case 1:
	switch( (*p) ) {
		case 67u: goto st2;
		case 68u: goto st423;
		case 71u: goto st428;
		case 72u: goto st429;
		case 79u: goto st444;
		case 80u: goto st450;
		case 84u: goto st452;
	}
	goto st0;
tr33:
#line 30 "../ragel/formats/http/http.rl"
	{
    p--;
    {goto st455;}
  }
	goto st0;
#line 68 "schwa/formats/http_gen.cc"
st0:
cs = 0;
	goto _out;
st2:
	if ( ++p == pe )
		goto _test_eof2;
case 2:
	if ( (*p) == 79u )
		goto st3;
	goto st0;
st3:
	if ( ++p == pe )
		goto _test_eof3;
case 3:
	if ( (*p) == 78u )
		goto st4;
	goto st0;
st4:
	if ( ++p == pe )
		goto _test_eof4;
case 4:
	if ( (*p) == 78u )
		goto st5;
	goto st0;
st5:
	if ( ++p == pe )
		goto _test_eof5;
case 5:
	if ( (*p) == 69u )
		goto st6;
	goto st0;
st6:
	if ( ++p == pe )
		goto _test_eof6;
case 6:
	if ( (*p) == 67u )
		goto st7;
	goto st0;
st7:
	if ( ++p == pe )
		goto _test_eof7;
case 7:
	if ( (*p) == 84u )
		goto st8;
	goto st0;
st8:
	if ( ++p == pe )
		goto _test_eof8;
case 8:
	if ( (*p) == 32u )
		goto st9;
	goto st0;
st9:
	if ( ++p == pe )
		goto _test_eof9;
case 9:
	switch( (*p) ) {
		case 32u: goto st10;
		case 33u: goto st76;
		case 37u: goto st77;
		case 47u: goto st244;
		case 58u: goto st79;
		case 61u: goto st76;
		case 64u: goto st83;
		case 91u: goto st88;
		case 95u: goto st76;
		case 126u: goto st76;
	}
	if ( (*p) < 65u ) {
		if ( 36u <= (*p) && (*p) <= 59u )
			goto st76;
	} else if ( (*p) > 90u ) {
		if ( 97u <= (*p) && (*p) <= 122u )
			goto st247;
	} else
		goto st247;
	goto st0;
st10:
	if ( ++p == pe )
		goto _test_eof10;
case 10:
	if ( (*p) == 72u )
		goto st11;
	goto st0;
st11:
	if ( ++p == pe )
		goto _test_eof11;
case 11:
	if ( (*p) == 84u )
		goto st12;
	goto st0;
st12:
	if ( ++p == pe )
		goto _test_eof12;
case 12:
	if ( (*p) == 84u )
		goto st13;
	goto st0;
st13:
	if ( ++p == pe )
		goto _test_eof13;
case 13:
	if ( (*p) == 80u )
		goto st14;
	goto st0;
st14:
	if ( ++p == pe )
		goto _test_eof14;
case 14:
	if ( (*p) == 47u )
		goto st15;
	goto st0;
st15:
	if ( ++p == pe )
		goto _test_eof15;
case 15:
	if ( 48u <= (*p) && (*p) <= 57u )
		goto st16;
	goto st0;
st16:
	if ( ++p == pe )
		goto _test_eof16;
case 16:
	if ( (*p) == 46u )
		goto st17;
	goto st0;
st17:
	if ( ++p == pe )
		goto _test_eof17;
case 17:
	if ( 48u <= (*p) && (*p) <= 57u )
		goto st18;
	goto st0;
st18:
	if ( ++p == pe )
		goto _test_eof18;
case 18:
	switch( (*p) ) {
		case 10u: goto st19;
		case 13u: goto st30;
	}
	goto st0;
tr83:
#line 17 "../ragel/formats/http/http.rl"
	{ _content_type_subtype_end(p); }
	goto st19;
tr100:
#line 21 "../ragel/formats/http/http.rl"
	{ _content_type_param_val_end(p); }
	goto st19;
st19:
	if ( ++p == pe )
		goto _test_eof19;
case 19:
#line 223 "schwa/formats/http_gen.cc"
	switch( (*p) ) {
		case 10u: goto st456;
		case 13u: goto st20;
		case 67u: goto st34;
		case 99u: goto st34;
		case 124u: goto st21;
		case 126u: goto st21;
	}
	if ( (*p) < 45u ) {
		if ( (*p) < 35u ) {
			if ( 32u <= (*p) && (*p) <= 33u )
				goto st21;
		} else if ( (*p) > 39u ) {
			if ( 42u <= (*p) && (*p) <= 43u )
				goto st21;
		} else
			goto st21;
	} else if ( (*p) > 46u ) {
		if ( (*p) < 65u ) {
			if ( 48u <= (*p) && (*p) <= 57u )
				goto st21;
		} else if ( (*p) > 90u ) {
			if ( 94u <= (*p) && (*p) <= 122u )
				goto st21;
		} else
			goto st21;
	} else
		goto st21;
	goto tr33;
st456:
	if ( ++p == pe )
		goto _test_eof456;
case 456:
	_widec = (*p);
	_widec = (short)(256u + ((*p) - 0u));
	if ( 
#line 25 "../ragel/formats/http/http.rl"
 _message_body_test()  ) _widec += 256;
	switch( _widec ) {
		case 288: goto tr481;
		case 544: goto tr483;
	}
	if ( _widec < 512 ) {
		if ( 265 <= _widec && _widec <= 269 )
			goto tr481;
	} else if ( _widec > 520 ) {
		if ( _widec > 525 ) {
			if ( 526 <= _widec && _widec <= 767 )
				goto tr482;
		} else if ( _widec >= 521 )
			goto tr483;
	} else
		goto tr482;
	goto st0;
tr481:
#line 23 "../ragel/formats/http/http.rl"
	{ _message_body_start(p); }
#line 26 "../ragel/formats/http/http.rl"
	{ _message_body_end(p); }
	goto st457;
tr485:
#line 26 "../ragel/formats/http/http.rl"
	{ _message_body_end(p); }
	goto st457;
st457:
	if ( ++p == pe )
		goto _test_eof457;
case 457:
#line 292 "schwa/formats/http_gen.cc"
	if ( (*p) == 32u )
		goto st457;
	if ( 9u <= (*p) && (*p) <= 13u )
		goto st457;
	goto st0;
tr482:
#line 23 "../ragel/formats/http/http.rl"
	{ _message_body_start(p); }
#line 24 "../ragel/formats/http/http.rl"
	{ _message_body_consume((*p)); }
	goto st458;
tr483:
#line 23 "../ragel/formats/http/http.rl"
	{ _message_body_start(p); }
#line 24 "../ragel/formats/http/http.rl"
	{ _message_body_consume((*p)); }
#line 26 "../ragel/formats/http/http.rl"
	{ _message_body_end(p); }
	goto st458;
tr486:
#line 24 "../ragel/formats/http/http.rl"
	{ _message_body_consume((*p)); }
	goto st458;
tr487:
#line 24 "../ragel/formats/http/http.rl"
	{ _message_body_consume((*p)); }
#line 26 "../ragel/formats/http/http.rl"
	{ _message_body_end(p); }
	goto st458;
st458:
	if ( ++p == pe )
		goto _test_eof458;
case 458:
#line 326 "schwa/formats/http_gen.cc"
	_widec = (*p);
	_widec = (short)(256u + ((*p) - 0u));
	if ( 
#line 25 "../ragel/formats/http/http.rl"
 _message_body_test()  ) _widec += 256;
	switch( _widec ) {
		case 288: goto tr485;
		case 544: goto tr487;
	}
	if ( _widec < 512 ) {
		if ( 265 <= _widec && _widec <= 269 )
			goto tr485;
	} else if ( _widec > 520 ) {
		if ( _widec > 525 ) {
			if ( 526 <= _widec && _widec <= 767 )
				goto tr486;
		} else if ( _widec >= 521 )
			goto tr487;
	} else
		goto tr486;
	goto st0;
st20:
	if ( ++p == pe )
		goto _test_eof20;
case 20:
	if ( (*p) == 10u )
		goto st456;
	goto st0;
st21:
	if ( ++p == pe )
		goto _test_eof21;
case 21:
	switch( (*p) ) {
		case 9u: goto st22;
		case 58u: goto st23;
		case 124u: goto st21;
		case 126u: goto st21;
	}
	if ( (*p) < 45u ) {
		if ( (*p) < 35u ) {
			if ( 32u <= (*p) && (*p) <= 33u )
				goto st21;
		} else if ( (*p) > 39u ) {
			if ( 42u <= (*p) && (*p) <= 43u )
				goto st21;
		} else
			goto st21;
	} else if ( (*p) > 46u ) {
		if ( (*p) < 65u ) {
			if ( 48u <= (*p) && (*p) <= 57u )
				goto st21;
		} else if ( (*p) > 90u ) {
			if ( 94u <= (*p) && (*p) <= 122u )
				goto st21;
		} else
			goto st21;
	} else
		goto st21;
	goto tr33;
st22:
	if ( ++p == pe )
		goto _test_eof22;
case 22:
	switch( (*p) ) {
		case 9u: goto st22;
		case 32u: goto st22;
		case 58u: goto st23;
	}
	goto tr33;
st23:
	if ( ++p == pe )
		goto _test_eof23;
case 23:
	switch( (*p) ) {
		case 9u: goto st23;
		case 10u: goto st24;
		case 13u: goto st27;
		case 32u: goto st23;
		case 127u: goto tr33;
	}
	if ( (*p) <= 31u )
		goto tr33;
	goto st28;
tr67:
#line 12 "../ragel/formats/http/http.rl"
	{ _content_length_end(p); }
	goto st24;
tr111:
#line 17 "../ragel/formats/http/http.rl"
	{ _content_type_subtype_end(p); }
	goto st24;
tr105:
#line 21 "../ragel/formats/http/http.rl"
	{ _content_type_param_val_end(p); }
	goto st24;
st24:
	if ( ++p == pe )
		goto _test_eof24;
case 24:
#line 426 "schwa/formats/http_gen.cc"
	switch( (*p) ) {
		case 9u: goto st23;
		case 10u: goto st456;
		case 13u: goto st20;
		case 32u: goto st25;
		case 33u: goto st21;
		case 67u: goto st34;
		case 99u: goto st34;
		case 124u: goto st21;
		case 126u: goto st21;
	}
	if ( (*p) < 45u ) {
		if ( (*p) > 39u ) {
			if ( 42u <= (*p) && (*p) <= 43u )
				goto st21;
		} else if ( (*p) >= 35u )
			goto st21;
	} else if ( (*p) > 46u ) {
		if ( (*p) < 65u ) {
			if ( 48u <= (*p) && (*p) <= 57u )
				goto st21;
		} else if ( (*p) > 90u ) {
			if ( 94u <= (*p) && (*p) <= 122u )
				goto st21;
		} else
			goto st21;
	} else
		goto st21;
	goto tr33;
st25:
	if ( ++p == pe )
		goto _test_eof25;
case 25:
	switch( (*p) ) {
		case 9u: goto st26;
		case 10u: goto st24;
		case 13u: goto st27;
		case 32u: goto st25;
		case 33u: goto st31;
		case 58u: goto st23;
		case 124u: goto st31;
		case 126u: goto st31;
		case 127u: goto tr33;
	}
	if ( (*p) < 45u ) {
		if ( (*p) < 35u ) {
			if ( (*p) <= 31u )
				goto tr33;
		} else if ( (*p) > 39u ) {
			if ( 42u <= (*p) && (*p) <= 43u )
				goto st31;
		} else
			goto st31;
	} else if ( (*p) > 46u ) {
		if ( (*p) < 65u ) {
			if ( 48u <= (*p) && (*p) <= 57u )
				goto st31;
		} else if ( (*p) > 90u ) {
			if ( 94u <= (*p) && (*p) <= 122u )
				goto st31;
		} else
			goto st31;
	} else
		goto st31;
	goto st28;
st26:
	if ( ++p == pe )
		goto _test_eof26;
case 26:
	switch( (*p) ) {
		case 9u: goto st26;
		case 10u: goto st24;
		case 13u: goto st27;
		case 32u: goto st26;
		case 58u: goto st23;
		case 127u: goto tr33;
	}
	if ( (*p) <= 31u )
		goto tr33;
	goto st28;
tr68:
#line 12 "../ragel/formats/http/http.rl"
	{ _content_length_end(p); }
	goto st27;
tr112:
#line 17 "../ragel/formats/http/http.rl"
	{ _content_type_subtype_end(p); }
	goto st27;
tr106:
#line 21 "../ragel/formats/http/http.rl"
	{ _content_type_param_val_end(p); }
	goto st27;
st27:
	if ( ++p == pe )
		goto _test_eof27;
case 27:
#line 523 "schwa/formats/http_gen.cc"
	if ( (*p) == 10u )
		goto st24;
	goto tr33;
st28:
	if ( ++p == pe )
		goto _test_eof28;
case 28:
	switch( (*p) ) {
		case 9u: goto st29;
		case 10u: goto st24;
		case 13u: goto st27;
		case 32u: goto st29;
		case 127u: goto tr33;
	}
	if ( (*p) <= 31u )
		goto tr33;
	goto st28;
tr66:
#line 12 "../ragel/formats/http/http.rl"
	{ _content_length_end(p); }
	goto st29;
st29:
	if ( ++p == pe )
		goto _test_eof29;
case 29:
#line 549 "schwa/formats/http_gen.cc"
	switch( (*p) ) {
		case 9u: goto st29;
		case 10u: goto st19;
		case 13u: goto st30;
		case 32u: goto st29;
		case 127u: goto tr33;
	}
	if ( (*p) <= 31u )
		goto tr33;
	goto st28;
tr84:
#line 17 "../ragel/formats/http/http.rl"
	{ _content_type_subtype_end(p); }
	goto st30;
tr101:
#line 21 "../ragel/formats/http/http.rl"
	{ _content_type_param_val_end(p); }
	goto st30;
st30:
	if ( ++p == pe )
		goto _test_eof30;
case 30:
#line 572 "schwa/formats/http_gen.cc"
	if ( (*p) == 10u )
		goto st19;
	goto st0;
st31:
	if ( ++p == pe )
		goto _test_eof31;
case 31:
	switch( (*p) ) {
		case 9u: goto st32;
		case 10u: goto st24;
		case 13u: goto st27;
		case 32u: goto st33;
		case 33u: goto st31;
		case 58u: goto st23;
		case 124u: goto st31;
		case 126u: goto st31;
		case 127u: goto tr33;
	}
	if ( (*p) < 45u ) {
		if ( (*p) < 35u ) {
			if ( (*p) <= 31u )
				goto tr33;
		} else if ( (*p) > 39u ) {
			if ( 42u <= (*p) && (*p) <= 43u )
				goto st31;
		} else
			goto st31;
	} else if ( (*p) > 46u ) {
		if ( (*p) < 65u ) {
			if ( 48u <= (*p) && (*p) <= 57u )
				goto st31;
		} else if ( (*p) > 90u ) {
			if ( 94u <= (*p) && (*p) <= 122u )
				goto st31;
		} else
			goto st31;
	} else
		goto st31;
	goto st28;
st32:
	if ( ++p == pe )
		goto _test_eof32;
case 32:
	switch( (*p) ) {
		case 9u: goto st32;
		case 10u: goto st19;
		case 13u: goto st30;
		case 32u: goto st32;
		case 58u: goto st23;
		case 127u: goto tr33;
	}
	if ( (*p) <= 31u )
		goto tr33;
	goto st28;
st33:
	if ( ++p == pe )
		goto _test_eof33;
case 33:
	switch( (*p) ) {
		case 9u: goto st32;
		case 10u: goto st19;
		case 13u: goto st30;
		case 32u: goto st33;
		case 33u: goto st31;
		case 58u: goto st23;
		case 124u: goto st31;
		case 126u: goto st31;
		case 127u: goto tr33;
	}
	if ( (*p) < 45u ) {
		if ( (*p) < 35u ) {
			if ( (*p) <= 31u )
				goto tr33;
		} else if ( (*p) > 39u ) {
			if ( 42u <= (*p) && (*p) <= 43u )
				goto st31;
		} else
			goto st31;
	} else if ( (*p) > 46u ) {
		if ( (*p) < 65u ) {
			if ( 48u <= (*p) && (*p) <= 57u )
				goto st31;
		} else if ( (*p) > 90u ) {
			if ( 94u <= (*p) && (*p) <= 122u )
				goto st31;
		} else
			goto st31;
	} else
		goto st31;
	goto st28;
st34:
	if ( ++p == pe )
		goto _test_eof34;
case 34:
	switch( (*p) ) {
		case 9u: goto st22;
		case 58u: goto st23;
		case 79u: goto st35;
		case 111u: goto st35;
		case 124u: goto st21;
		case 126u: goto st21;
	}
	if ( (*p) < 45u ) {
		if ( (*p) < 35u ) {
			if ( 32u <= (*p) && (*p) <= 33u )
				goto st21;
		} else if ( (*p) > 39u ) {
			if ( 42u <= (*p) && (*p) <= 43u )
				goto st21;
		} else
			goto st21;
	} else if ( (*p) > 46u ) {
		if ( (*p) < 65u ) {
			if ( 48u <= (*p) && (*p) <= 57u )
				goto st21;
		} else if ( (*p) > 90u ) {
			if ( 94u <= (*p) && (*p) <= 122u )
				goto st21;
		} else
			goto st21;
	} else
		goto st21;
	goto tr33;
st35:
	if ( ++p == pe )
		goto _test_eof35;
case 35:
	switch( (*p) ) {
		case 9u: goto st22;
		case 58u: goto st23;
		case 78u: goto st36;
		case 110u: goto st36;
		case 124u: goto st21;
		case 126u: goto st21;
	}
	if ( (*p) < 45u ) {
		if ( (*p) < 35u ) {
			if ( 32u <= (*p) && (*p) <= 33u )
				goto st21;
		} else if ( (*p) > 39u ) {
			if ( 42u <= (*p) && (*p) <= 43u )
				goto st21;
		} else
			goto st21;
	} else if ( (*p) > 46u ) {
		if ( (*p) < 65u ) {
			if ( 48u <= (*p) && (*p) <= 57u )
				goto st21;
		} else if ( (*p) > 90u ) {
			if ( 94u <= (*p) && (*p) <= 122u )
				goto st21;
		} else
			goto st21;
	} else
		goto st21;
	goto tr33;
st36:
	if ( ++p == pe )
		goto _test_eof36;
case 36:
	switch( (*p) ) {
		case 9u: goto st22;
		case 58u: goto st23;
		case 84u: goto st37;
		case 116u: goto st37;
		case 124u: goto st21;
		case 126u: goto st21;
	}
	if ( (*p) < 45u ) {
		if ( (*p) < 35u ) {
			if ( 32u <= (*p) && (*p) <= 33u )
				goto st21;
		} else if ( (*p) > 39u ) {
			if ( 42u <= (*p) && (*p) <= 43u )
				goto st21;
		} else
			goto st21;
	} else if ( (*p) > 46u ) {
		if ( (*p) < 65u ) {
			if ( 48u <= (*p) && (*p) <= 57u )
				goto st21;
		} else if ( (*p) > 90u ) {
			if ( 94u <= (*p) && (*p) <= 122u )
				goto st21;
		} else
			goto st21;
	} else
		goto st21;
	goto tr33;
st37:
	if ( ++p == pe )
		goto _test_eof37;
case 37:
	switch( (*p) ) {
		case 9u: goto st22;
		case 58u: goto st23;
		case 69u: goto st38;
		case 101u: goto st38;
		case 124u: goto st21;
		case 126u: goto st21;
	}
	if ( (*p) < 45u ) {
		if ( (*p) < 35u ) {
			if ( 32u <= (*p) && (*p) <= 33u )
				goto st21;
		} else if ( (*p) > 39u ) {
			if ( 42u <= (*p) && (*p) <= 43u )
				goto st21;
		} else
			goto st21;
	} else if ( (*p) > 46u ) {
		if ( (*p) < 65u ) {
			if ( 48u <= (*p) && (*p) <= 57u )
				goto st21;
		} else if ( (*p) > 90u ) {
			if ( 94u <= (*p) && (*p) <= 122u )
				goto st21;
		} else
			goto st21;
	} else
		goto st21;
	goto tr33;
st38:
	if ( ++p == pe )
		goto _test_eof38;
case 38:
	switch( (*p) ) {
		case 9u: goto st22;
		case 58u: goto st23;
		case 78u: goto st39;
		case 110u: goto st39;
		case 124u: goto st21;
		case 126u: goto st21;
	}
	if ( (*p) < 45u ) {
		if ( (*p) < 35u ) {
			if ( 32u <= (*p) && (*p) <= 33u )
				goto st21;
		} else if ( (*p) > 39u ) {
			if ( 42u <= (*p) && (*p) <= 43u )
				goto st21;
		} else
			goto st21;
	} else if ( (*p) > 46u ) {
		if ( (*p) < 65u ) {
			if ( 48u <= (*p) && (*p) <= 57u )
				goto st21;
		} else if ( (*p) > 90u ) {
			if ( 94u <= (*p) && (*p) <= 122u )
				goto st21;
		} else
			goto st21;
	} else
		goto st21;
	goto tr33;
st39:
	if ( ++p == pe )
		goto _test_eof39;
case 39:
	switch( (*p) ) {
		case 9u: goto st22;
		case 58u: goto st23;
		case 84u: goto st40;
		case 116u: goto st40;
		case 124u: goto st21;
		case 126u: goto st21;
	}
	if ( (*p) < 45u ) {
		if ( (*p) < 35u ) {
			if ( 32u <= (*p) && (*p) <= 33u )
				goto st21;
		} else if ( (*p) > 39u ) {
			if ( 42u <= (*p) && (*p) <= 43u )
				goto st21;
		} else
			goto st21;
	} else if ( (*p) > 46u ) {
		if ( (*p) < 65u ) {
			if ( 48u <= (*p) && (*p) <= 57u )
				goto st21;
		} else if ( (*p) > 90u ) {
			if ( 94u <= (*p) && (*p) <= 122u )
				goto st21;
		} else
			goto st21;
	} else
		goto st21;
	goto tr33;
st40:
	if ( ++p == pe )
		goto _test_eof40;
case 40:
	switch( (*p) ) {
		case 9u: goto st22;
		case 45u: goto st41;
		case 46u: goto st21;
		case 58u: goto st23;
		case 124u: goto st21;
		case 126u: goto st21;
	}
	if ( (*p) < 42u ) {
		if ( (*p) > 33u ) {
			if ( 35u <= (*p) && (*p) <= 39u )
				goto st21;
		} else if ( (*p) >= 32u )
			goto st21;
	} else if ( (*p) > 43u ) {
		if ( (*p) < 65u ) {
			if ( 48u <= (*p) && (*p) <= 57u )
				goto st21;
		} else if ( (*p) > 90u ) {
			if ( 94u <= (*p) && (*p) <= 122u )
				goto st21;
		} else
			goto st21;
	} else
		goto st21;
	goto tr33;
st41:
	if ( ++p == pe )
		goto _test_eof41;
case 41:
	switch( (*p) ) {
		case 9u: goto st22;
		case 58u: goto st23;
		case 76u: goto st42;
		case 84u: goto st51;
		case 108u: goto st42;
		case 116u: goto st51;
		case 124u: goto st21;
		case 126u: goto st21;
	}
	if ( (*p) < 45u ) {
		if ( (*p) < 35u ) {
			if ( 32u <= (*p) && (*p) <= 33u )
				goto st21;
		} else if ( (*p) > 39u ) {
			if ( 42u <= (*p) && (*p) <= 43u )
				goto st21;
		} else
			goto st21;
	} else if ( (*p) > 46u ) {
		if ( (*p) < 65u ) {
			if ( 48u <= (*p) && (*p) <= 57u )
				goto st21;
		} else if ( (*p) > 90u ) {
			if ( 94u <= (*p) && (*p) <= 122u )
				goto st21;
		} else
			goto st21;
	} else
		goto st21;
	goto tr33;
st42:
	if ( ++p == pe )
		goto _test_eof42;
case 42:
	switch( (*p) ) {
		case 9u: goto st22;
		case 58u: goto st23;
		case 69u: goto st43;
		case 101u: goto st43;
		case 124u: goto st21;
		case 126u: goto st21;
	}
	if ( (*p) < 45u ) {
		if ( (*p) < 35u ) {
			if ( 32u <= (*p) && (*p) <= 33u )
				goto st21;
		} else if ( (*p) > 39u ) {
			if ( 42u <= (*p) && (*p) <= 43u )
				goto st21;
		} else
			goto st21;
	} else if ( (*p) > 46u ) {
		if ( (*p) < 65u ) {
			if ( 48u <= (*p) && (*p) <= 57u )
				goto st21;
		} else if ( (*p) > 90u ) {
			if ( 94u <= (*p) && (*p) <= 122u )
				goto st21;
		} else
			goto st21;
	} else
		goto st21;
	goto tr33;
st43:
	if ( ++p == pe )
		goto _test_eof43;
case 43:
	switch( (*p) ) {
		case 9u: goto st22;
		case 58u: goto st23;
		case 78u: goto st44;
		case 110u: goto st44;
		case 124u: goto st21;
		case 126u: goto st21;
	}
	if ( (*p) < 45u ) {
		if ( (*p) < 35u ) {
			if ( 32u <= (*p) && (*p) <= 33u )
				goto st21;
		} else if ( (*p) > 39u ) {
			if ( 42u <= (*p) && (*p) <= 43u )
				goto st21;
		} else
			goto st21;
	} else if ( (*p) > 46u ) {
		if ( (*p) < 65u ) {
			if ( 48u <= (*p) && (*p) <= 57u )
				goto st21;
		} else if ( (*p) > 90u ) {
			if ( 94u <= (*p) && (*p) <= 122u )
				goto st21;
		} else
			goto st21;
	} else
		goto st21;
	goto tr33;
st44:
	if ( ++p == pe )
		goto _test_eof44;
case 44:
	switch( (*p) ) {
		case 9u: goto st22;
		case 58u: goto st23;
		case 71u: goto st45;
		case 103u: goto st45;
		case 124u: goto st21;
		case 126u: goto st21;
	}
	if ( (*p) < 45u ) {
		if ( (*p) < 35u ) {
			if ( 32u <= (*p) && (*p) <= 33u )
				goto st21;
		} else if ( (*p) > 39u ) {
			if ( 42u <= (*p) && (*p) <= 43u )
				goto st21;
		} else
			goto st21;
	} else if ( (*p) > 46u ) {
		if ( (*p) < 65u ) {
			if ( 48u <= (*p) && (*p) <= 57u )
				goto st21;
		} else if ( (*p) > 90u ) {
			if ( 94u <= (*p) && (*p) <= 122u )
				goto st21;
		} else
			goto st21;
	} else
		goto st21;
	goto tr33;
st45:
	if ( ++p == pe )
		goto _test_eof45;
case 45:
	switch( (*p) ) {
		case 9u: goto st22;
		case 58u: goto st23;
		case 84u: goto st46;
		case 116u: goto st46;
		case 124u: goto st21;
		case 126u: goto st21;
	}
	if ( (*p) < 45u ) {
		if ( (*p) < 35u ) {
			if ( 32u <= (*p) && (*p) <= 33u )
				goto st21;
		} else if ( (*p) > 39u ) {
			if ( 42u <= (*p) && (*p) <= 43u )
				goto st21;
		} else
			goto st21;
	} else if ( (*p) > 46u ) {
		if ( (*p) < 65u ) {
			if ( 48u <= (*p) && (*p) <= 57u )
				goto st21;
		} else if ( (*p) > 90u ) {
			if ( 94u <= (*p) && (*p) <= 122u )
				goto st21;
		} else
			goto st21;
	} else
		goto st21;
	goto tr33;
st46:
	if ( ++p == pe )
		goto _test_eof46;
case 46:
	switch( (*p) ) {
		case 9u: goto st22;
		case 58u: goto st23;
		case 72u: goto st47;
		case 104u: goto st47;
		case 124u: goto st21;
		case 126u: goto st21;
	}
	if ( (*p) < 45u ) {
		if ( (*p) < 35u ) {
			if ( 32u <= (*p) && (*p) <= 33u )
				goto st21;
		} else if ( (*p) > 39u ) {
			if ( 42u <= (*p) && (*p) <= 43u )
				goto st21;
		} else
			goto st21;
	} else if ( (*p) > 46u ) {
		if ( (*p) < 65u ) {
			if ( 48u <= (*p) && (*p) <= 57u )
				goto st21;
		} else if ( (*p) > 90u ) {
			if ( 94u <= (*p) && (*p) <= 122u )
				goto st21;
		} else
			goto st21;
	} else
		goto st21;
	goto tr33;
st47:
	if ( ++p == pe )
		goto _test_eof47;
case 47:
	switch( (*p) ) {
		case 9u: goto st48;
		case 32u: goto st47;
		case 33u: goto st21;
		case 58u: goto st49;
		case 124u: goto st21;
		case 126u: goto st21;
	}
	if ( (*p) < 45u ) {
		if ( (*p) > 39u ) {
			if ( 42u <= (*p) && (*p) <= 43u )
				goto st21;
		} else if ( (*p) >= 35u )
			goto st21;
	} else if ( (*p) > 46u ) {
		if ( (*p) < 65u ) {
			if ( 48u <= (*p) && (*p) <= 57u )
				goto st21;
		} else if ( (*p) > 90u ) {
			if ( 94u <= (*p) && (*p) <= 122u )
				goto st21;
		} else
			goto st21;
	} else
		goto st21;
	goto tr33;
st48:
	if ( ++p == pe )
		goto _test_eof48;
case 48:
	switch( (*p) ) {
		case 9u: goto st48;
		case 32u: goto st48;
		case 58u: goto st49;
	}
	goto tr33;
st49:
	if ( ++p == pe )
		goto _test_eof49;
case 49:
	switch( (*p) ) {
		case 9u: goto st49;
		case 10u: goto st24;
